feat(server): use ddg for opensearch

--- a/packages/est_server/src/index.html
+++ b/packages/est_server/src/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Yixuan's Extensible Search Tool">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="Est">
+    <link rel="search" type="application/opensearchdescription+xml" href="/search.xml" title="Est">
   </head>
   <body style="font-family: monospace; margin-top: 39dvh; display: flex; justify-content: center; align-items: center; text-align: center;">
     <main style="display: flex; flex-direction: column; gap: 1em;">
